--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=auth-service
 server.port = 9200
 spring.datasource.url= jdbc:mysql://localhost:3306/quiz
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username= root
-spring.datasource.password= 
+spring.datasource.username=root
+spring.datasource.password=admin
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
