--- a/quiz-service/src/main/resources/application.properties
+++ b/quiz-service/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=quiz-service
 server.port = 9202
 spring.datasource.url= jdbc:mysql://localhost:3306/quiz
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username= root
-spring.datasource.password= 
+spring.datasource.username=root
+spring.datasource.password=admin
